# ros2_lidar_georeference

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bin2obj.py  makefile  package.xml
action/: Measurement.action
driver/fixposition/: Dockerfile
driver/velodyne/: Dockerfile
launch/: file_manager_with_rosbridge.launch.py  mylaunch.py  ros2_lidar_georeference.py
msg/: FileList.msg
script/: cleanup.sh  setup.sh
src/: file_manager.cpp  hello_world.cpp  measurement_collector.cpp  measurement_manager.cpp  measurement_processor.cpp  measurement_web_bridge.cpp
srv/: MeasurementProcess.srv  MeasurementResult.srv
web/: index.html  ros2_lidar_georeference.html
web/css/: style.css
web/js/: script.js
